--- a/weather/templates/weather_card.html
+++ b/weather/templates/weather_card.html
@@ -1,3 +1,5 @@
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'weather.css' %}">
 <section class="vh-100" style="background-color: #C1CFEA;">
     <div class="container py-5 h-100">
   
