--- a/weather/templates/weather_ui.html
+++ b/weather/templates/weather_ui.html
@@ -15,9 +15,9 @@
     <!-- Layout -->
     <link rel="stylesheet" href="{% static 'css/FlexboxLayout.css' %}">
     <!-- custom CSS -->
-    <link rel="stylesheet" href="weather/static/css/main.css">
+    <link rel="stylesheet" href="static/css/main.css">
     <!-- Font Awesome -->
-    <script src="weather/js/other.js" crossorigin="anonymous"></script>
+    <script src="js/other.js" crossorigin="anonymous"></script>
     <style media="all" id="fa-v4-font-face">
         /*!
  * Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com
@@ -11208,7 +11208,7 @@
         }
     </style>
     <!-- Script -->
-    <script src="weather/js/weather.js" defer=""></script>
+    <script src="js/weather.js" defer=""></script>
 </head>
 
 <body>
