--- a/weather/templates/weather_ui.html
+++ b/weather/templates/weather_ui.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
 
-    {% load static %}
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
@@ -13,7 +12,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <!-- Layout -->
-    <link rel="stylesheet" href="{% static 'css/FlexboxLayout.css' %}">
+    <link rel="stylesheet" href="static/css/FlexboxLayout.css">
     <!-- custom CSS -->
     <link rel="stylesheet" href="static/css/main.css">
     <!-- Font Awesome -->
