--- a/weather/templates/weather_ui.html
+++ b/weather/templates/weather_ui.html
@@ -16,7 +16,7 @@
     <!-- custom CSS -->
     <link rel="stylesheet" href="static/css/main.css">
     <!-- Font Awesome -->
-    <script src="js/other.js" crossorigin="anonymous"></script>
+    <script src="static/js/other.js" crossorigin="anonymous"></script>
     <style media="all" id="fa-v4-font-face">
         /*!
  * Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com
@@ -11207,7 +11207,7 @@
         }
     </style>
     <!-- Script -->
-    <script src="js/weather.js" defer=""></script>
+    <script src="static/js/weather.js" defer=""></script>
 </head>
 
 <body>
